--- a/src/templates/auth-uk.hbs
+++ b/src/templates/auth-uk.hbs
@@ -8,13 +8,13 @@
   <input type='checkbox' id='chk' aria-hidden='true' />
   <div class='signup'>
     <form id='regForm'>
-      <label class='label-form' for='chk' aria-hidden='true'>Sign up</label>
+      <label class='label-form' for='chk' aria-hidden='true'>Реєстрація</label>
       <input
         id='reg-mail'
         class='input-form'
         type='email'
         name='email'
-        placeholder='Email'
+        placeholder='Пошта'
         required='required'
       />
       <input
@@ -22,22 +22,22 @@
         class='input-form'
         type='password'
         name='pswd'
-        placeholder='Password'
+        placeholder='Пароль'
         required='required'
       />
-      <button class='button-form'>Sign up</button>
+      <button class='button-form'>Зареєструватися</button>
     </form>
   </div>
 
   <div class='login'>
     <form id='loginForm'>
-      <label class='label-form' for='chk' aria-hidden='true'>Login</label>
+      <label class='label-form' for='chk' aria-hidden='true'>Вхід</label>
       <input
         id='login-mail'
         class='input-form'
         type='email'
         name='email'
-        placeholder='Email'
+        placeholder='Пошта'
         required='required'
       />
       <input
@@ -45,10 +45,10 @@
         class='input-form'
         type='password'
         name='pswd'
-        placeholder='Password'
+        placeholder='Пароль'
         required='required'
       />
-      <button class='button-form'>Login</button>
+      <button class='button-form'>Увійти</button>
     </form>
   </div>
 </div>
