--- a/src/sass/components/_search-form.scss
+++ b/src/sass/components/_search-form.scss
@@ -39,9 +39,10 @@
   display: none;
 
   @media screen and (min-width: 768px) {
-    display: block;
+    display: flex;
     padding: 30px 30px;
     padding-bottom: 0;
+    justify-content: center;
 
     z-index: 99;
   }
