--- a/src/sass/components/_search-form.scss
+++ b/src/sass/components/_search-form.scss
@@ -39,12 +39,15 @@
   display: none;
 
   @media screen and (min-width: 768px) {
-    display: flex;
+    display: block;
+    transform: translateX(120px);
     padding: 30px 30px;
     padding-bottom: 0;
-    justify-content: center;
-
     z-index: 99;
+  }
+
+  @media screen and (min-width: 1024px) {
+    transform: translateX(250px);
   }
 }
 
